# llama.cpp.isc26

./: ISC_REPORT.md  README.md
common/: arg.cpp  common.cpp  common.h
decode-temp/: README.md  build-decode.sh  decode-baseline.slurm  decode-correctness.slurm  decode-kvquant.slurm  decode-perplexity.slurm  decode-profile-ncu.slurm  decode-profile.slurm  nsys-shape-breakdown.sh
examples/speculative/: CMakeLists.txt  speculative.cpp
ggml/src/ggml-cuda/: mmvq.cu
include/: llama.h
src/: CMakeLists.txt  llama-context.cpp  llama-dp.cpp  llama-dp.h  llama-model.cpp  llama.cpp
tools/: CMakeLists.txt
tools/batched-bench/: CMakeLists.txt  batched-bench.cpp
tools/orchestrator/: CMakeLists.txt  cluster-test.cpp  cluster.h  cluster_mpi.cpp  llamacpp_orc_build.sh  orchestrator.cpp  orchestrator.h  orchestrator_manual.md  smoke-test.cpp
tools/orchestrator/slurm/: README.md  aggregate-cluster.py  aggregate-multinode.py  baseline-original.slurm  dp-batched-bench-cluster.slurm  dp-batched-bench.slurm  dp-cluster-batched-bench.slurm  dp-mpi-batched-bench.slurm  dp-multinode-srun.slurm  dp-orchestrator.slurm  dp-oversubscribe.slurm  dp-prac-cluster-batched-bench.slurm  dp-prac-mpi-batched-bench.slurm  dp-prac-proxy-batched-bench.slurm  dp-prac-proxy-perplexity.slurm  dp-proxy-batched-bench.slurm  dp-proxy-perplexity.slurm  dp-speculative-cluster.slurm  dp-speculative.slurm  dp-split.slurm  dp-watchdog.slurm  orig-perplexity.slurm  profile-bottlenecks.slurm
tools/orchestrator/slurm/sweeps/: README.md  _sweep_common.sh  cluster-maxout-mpirun.slurm  cluster-maxout.slurm  dense-balanced.slurm  dense-decode.slurm  dense-prefill.slurm  moe-balanced.slurm  moe-decode.slurm  moe-prefill.slurm
tools/orchestrator/slurm/tuning/: submit-free.sh  tune-t1-decode.slurm  tune-t2-mixed.slurm  tune-t3-prefill.slurm  tune-t4-heavy.slurm
tools/perplexity/: CMakeLists.txt  perplexity.cpp
